web/src/main/webapp/app/views/views.scss
/*!
 * Copyright (C) 2017 Inera AB (http://www.inera.se)
 *
 * This file is part of sklintyg (https://github.com/sklintyg).
 *
 * sklintyg is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * sklintyg is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/*
Common styles for this view and its child directives
*/

/*
 used on enhetArenden and ejSigneradeUtkast
*/

.arende-table-section {
  padding-top: 20px;
}

td.center {
  text-align: center;
}

/*
utils
*/

h2 {
  &.less-top-padding {
    /* useful if h2 is placed immediately after h1 */
    padding-top: 10px;
  }
}
/**
 This is a workaround class to get rounded borders on tables. IE 11 will render artifacts between columns if the table itself
 has border-radius, so we wrap the entire table and let the wrapper have rounder border.
 */
.rounded-table-wrapper {
  border-radius: $table-striped-border-radius;
  overflow: hidden;
  display: inline-block;
  margin-bottom: 15px;

  &.full-width {
    display: block;
  }
}

/* table striped style for all webcert */
.wc-table-striped {
  border-collapse: separate;
  border-spacing: 0 0;
  margin-bottom: 0;

  .btn-primary {
    padding: 7px 15px;
    min-width: 50px;
  }

  .btn-secondary {
    padding: 7px 15px;
    min-width: 50px;
  }

  // Table header ---------------
  > thead > tr > th {
    padding: 7px;
    background-color: $wc-color-15;
    @extend %wc-typo-06;
    color: $wc-color-19;
    border: none;

    &:first-child {
      padding-left: 21px;
    }
  }
  // Table body ---------------
  > tbody > tr {
      height: 50px;

    &:hover {
      > td {
        border-top: 1px solid $wc-color-21;
        border-bottom: 1px solid $wc-color-21;
      }

      > td:first-child {
        border-left: 1px solid $wc-color-21;
        padding-left: 21px;
      }

      > td:last-child {
        border-right: 1px solid $wc-color-21;
      }
    }

    //a normal td
    > td {
      padding: 5px;
      border-top: 1px solid transparent;
      border-bottom: 1px solid $wc-color-15;

      &:first-child {
        padding-left: 21px;
        border-left: 1px solid $wc-color-15;
      }

      &:last-child {
        border-right: 1px solid $wc-color-15;
        border-radius: 0;
      }

      &.nopadding {
        padding: 0;
      }
    }
  }
}

